<resources>
    <string name="app_name">Aplikasi Wisata Semarang</string>
        <string name="view_more">Lihat</string>
        <string name="nama_wisata">Nama Wisata</string>
        <string name="alamat">Alamat Wisata</string>
        <string name="jam_buka">Jam Buka</string>
        <string name="rating">4.2</string>
        <string name="rating_text">Rating: </string>
        <string name="namaWisata">Data Received</string>
        <string name="detail_wisata">Detail Wisata</string>
        <string name="alamat_text">Alamat:</string>
        <string name="buka">Buka:</string>
        <string name="harga_tiket">harga_tiket</string>
        <string name="about_me">About Me</string>
</resources>

