<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wisataview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GreenPrimaryText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo_wisata"
            android:contentDescription="@string/nama_wisata"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:src="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/nama_wisata"
            android:text="@string/nama_wisata"
            style="@style/NamaWisata"/>

        <LinearLayout
            style="@style/DefaultMargin"
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_text" />

            <RatingBar
                android:id="@+id/rating_wisata"
                style="@style/rating_bar_small"
                tools:rating="@string/rating" />

            <TextView
                android:id="@+id/rating_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/rating" />

        </LinearLayout>

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/detail_wisata"
            style="@style/DetailWisata"
            android:text="@string/detail_wisata"/>

        <TableLayout
            style="@style/DefaultMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/RowKiri"
                    android:text="@string/alamat_text" />

                <TextView
                    android:id="@+id/alamat_wisata"
                    style="@style/RowKanan"
                    android:text="@string/alamat" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/RowKiri"
                    android:text="@string/buka"/>

                <TextView
                    android:id="@+id/jam_buka"
                    style="@style/RowKanan"
                    android:text="@string/jam_buka"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/RowKiri"
                    android:text="Harga Tiket:"/>

                <TextView
                    android:id="@+id/harga_tiket"
                    style="@style/RowKanan"
                    android:text="@string/harga_tiket"/>

            </TableRow>

        </TableLayout>


    </LinearLayout>

</ScrollView>