<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="#efefef"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp">

    <ImageView
        android:contentDescription="@string/nama_wisata"
        android:id="@+id/item_photo"
        android:layout_width="70dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        tools:src="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/item_photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/nama_wisata" />

        <LinearLayout
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_text" />

            <RatingBar
                android:id="@+id/rating_wisata"
                style="@style/rating_bar_small"
                tools:rating="@string/rating" />

            <TextView
                android:id="@+id/rating_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/rating" />

        </LinearLayout>

        <TextView
            android:id="@+id/item_buka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/jam_buka" />

        <Button
            android:id="@+id/button_view_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/view_more" />

    </LinearLayout>

</RelativeLayout>